--- a/src/sdk/makefile
+++ b/src/sdk/makefile
@@ -25,6 +25,8 @@ clean	:
 
 install :
 	make
+	mkdir -p  $(HOME)/lib
+	mkdir -p  $(HOME)/include
 	for i in $(INSTALL_APP);\
 	do \
 		echo "rm -f $$i";\
