add set session

--- a/src/dbmysql/makefile
+++ b/src/dbmysql/makefile
@@ -16,9 +16,9 @@ test	: $(test_o)
 	g++ -o $@  $(test_o) -L. -L$(HOME)/lib -luhp_mysql -luhp_util -lssl -lpthread
 
 .cpp.o	:
-	g++ -g -fPIC -O2 -Wno-write-strings -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
+	g++ -g -fPIC -O2 -Wall  -Wno-write-strings -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
 .c.o	:
-	gcc -std=gnu99 -g -fPIC -O2 -Wno-write-strings  -o $@ -c $< -I. -I/usr/include -I$(HOME)/include
+	gcc -std=gnu99 -g -fPIC -O2 -Wall  -Wno-write-strings  -o $@ -c $< -I. -I/usr/include -I$(HOME)/include
 
 clean	:
 	rm -f *.so *.o
