--- a/src/uhp/makefile
+++ b/src/uhp/makefile
@@ -18,10 +18,10 @@ uhp	:	$(server_o)
 #	ctags -R .
 
 .cpp.o	:
-	g++ -g -fPIC -O2 -Wno-write-strings  -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
+	g++ -g -fPIC -O2 -Wall -Werror -Wno-write-strings  -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
 
 .c.o	:
-	g++ -g -fPIC -O2  -Wno-write-strings  -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
+	g++ -g -fPIC -O2  -Wall -Werror -Wno-write-strings -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
 	
 #.c.o	:
 #	gcc -std=gnu99 -g -fPIC -O2  -Wno-write-strings  -o $@ -c $< -I. -I/usr/include -I$(HOME)/include -D_GNU_SOURCE
